--- a/profile.html
+++ b/profile.html
@@ -74,7 +74,7 @@
 
     <footer>
         <div class="container">
-            <p>Created by [Nama Anda]</p>
+            <p>Dibuat oleh Wibiksono Pratama Didok</p>
         </div>
     </footer>
 
